Closed
Bug 1696352
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::dom::Document::IncLazyLoadImageCount]
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
89 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | wontfix |
| firefox88 | --- | disabled |
| firefox89 | --- | fixed |
People
(Reporter: jcristau, Assigned: sefeng211)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [not-a-fission-bug])
Crash Data
Attachments
(1 file)
Maybe Fission related. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/27881771-72f1-408d-b960-139080210304
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (NS_SUCCEEDED(wc->SetHadLazyLoadImage(true)))
Top 10 frames of crashing thread:
0 libxul.so mozilla::dom::Document::IncLazyLoadImageCount dom/base/Document.cpp:15574
1 libxul.so mozilla::dom::HTMLImageElement::SetLazyLoading dom/html/HTMLImageElement.cpp:1271
2 libxul.so mozilla::dom::HTMLImageElement::AfterSetAttr dom/html/HTMLImageElement.cpp:350
3 libxul.so mozilla::dom::Element::SetAttrAndNotify dom/base/Element.cpp:2507
4 libxul.so mozilla::dom::Element::SetAttr dom/base/Element.cpp:2363
5 libxul.so nsHtml5TreeOperation::Perform parser/html/nsHtml5TreeOperation.cpp:1199
6 libxul.so nsHtml5TreeOpExecutor::RunFlushLoop parser/html/nsHtml5TreeOpExecutor.cpp:613
7 libxul.so nsHtml5ExecutorReflusher::Run parser/html/nsHtml5TreeOpExecutor.cpp:78
8 libxul.so mozilla::SchedulerGroup::Runnable::Run xpcom/threads/SchedulerGroup.cpp:146
9 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:760
I hit this content crash yesterday, no idea how (it popped up as an unsubmitted report this morning). There's a few other reports in the last couple of weeks, all with fission.
Comment 1•5 years ago
|
||
At least the assert has been introduced by bug 1692350, it seems.
Flags: needinfo?(sefeng)
Regressed by: 1692350
Updated•5 years ago
|
Has Regression Range: --- → yes
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1692350
status-firefox86:
--- → unaffected
status-firefox87:
--- → affected
status-firefox88:
--- → affected
status-firefox-esr78:
--- → unaffected
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Updated•5 years ago
|
status-firefox89:
--- → ?
Whiteboard: [not-a-fission-bug]
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/055945e043ea
Handle SetHadLazyLoadImage failure gracefully r=emilio
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(sefeng)
Comment 5•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•