Bug 1696352 - Handle SetHadLazyLoadImage failure gracefully r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D110803